--- a/core/templates/msg_aluno.html
+++ b/core/templates/msg_aluno.html
@@ -1,6 +1,8 @@
 {% extends 'area_aluno.html' %}
 {% load static %}
 
+{% block title %}Mensagem - Área do Aluno{% endblock %} 
+
 {% block conteudoAluno %}
 <div class="width80 maxHeight content">
     <div class="msgPanel">
