--- a/core/templates/msg_professor.html
+++ b/core/templates/msg_professor.html
@@ -1,5 +1,8 @@
 {% extends 'area_professor.html' %}
 {% load static %}
+
+{% block title %}Mensagem - Área do Professor{% endblock %} 
+
 {% block conteudoProf %}
 <div class="width80 maxHeight content">
     <fieldset class="flexFieldSet">
