--- a/core/templates/pag_curso.html
+++ b/core/templates/pag_curso.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block estilo_unico %}{% static '/' %}css/site.css{% endblock %} 
-{% block script_unico %}{% endblock %}
-{% block login %}{% endblock %}
-{% block img_user %}{% endblock %}
-{% block title %}Cursos - Impacta{% endblock %} 
+
+{% block title %}Cursos - IMPACTA{% endblock %} 
+
 {% block main %}
 <section class = 'content width40 maxHeight'>
     <h1 class="maxWidth centerText">{{ curso }}</h1>
