--- a/core/templates/upload_prof.html
+++ b/core/templates/upload_prof.html
@@ -1,6 +1,8 @@
 {% extends 'area_professor.html' %}
 {% load static %}
 
+{% block title %}Trabalhos e Exercícios - Área do Professor{% endblock %} 
+
 {% block conteudoProf %}
 <div class="width80 maxHeight content">
         <fieldset class="flexFieldSet">
