--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -6,11 +6,57 @@
 html {
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+.drop_menu, .dropbtn{
+	display: none;
+}
+.menus, .menu_extenco{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 0.3em;
+}
+.img_user, .menu_icon {
+	width: 3em;
+	height: 3em;
+	margin: 0.5em;
+}
 a{text-decoration: none;}
 .motherNav{
 	display: flex;
 	flex-flow: column wrap;
 	align-items: flex-end;
+}
+.user, .dropbtn, .logo, .linkBtn {
+	width: 5em;
+	height: 4.5em;
+	background-color: #2a3c4a;
+	border: 0px black solid
+}
+.linkBtn{
+	display: flex;
+	justify-content: center;
+	height:100%;
+	height:4.5em;
+	width:9em; 
+	color: #FFFFFF;
+	font-weight: bold;
+}
+.drop_menu, drop_login {
+    position: relative;
+    display: inline-block;
+}
+.conteudo_menu, .conteudo_login {
+    display: none;
+    position: absolute;
+    background-color: #344a5b;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.conteudo_menu a, .conteudo_login a {
+    color: #ffffff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 .menu {
 	display: flex;
@@ -20,55 +66,29 @@ a{text-decoration: none;}
 	background-color:#2a3c4a;
 	position: fixed;
 	width: 100%;
-	height: 10%;
 	top: -1px;
 	left: -1px;
 	right: -1px;
 	z-index: 1;
 	padding: 0.4em;
 	padding-right: 2em;
+	padding-left: 2em;
 }
-.menus{
-	display: flex;
-	flex-flow: row;
-	justify-content: space-between;
-	height:min-content;
+.show {
+	display:block;
 }
 .img_logo {
 	width: 12em;
 	height: 3.6em;
 }
-.user {
-	width: 5em;
-	height: 4.5em;
-	background-color: #2a3c4a;
-	border: 0px black solid
-}
-.img_user {
-	width: 4em;
-	height: 4em;
-}
-
-.linkBtn{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height:inherit;
-	width: 11em; 
-	color: #FFFFFF;
-	background-color: #2a3c4a;
-	font-weight: bold;
-}
-.linkBtn:hover {
+.dropbtn:hover, .user:hover, .linkBtn:hover {
 	background-color: #23313c;	
 	box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-.conteudo_login {
-	display:flex;
-	flex-flow: column;
-    z-index: 1;
+.dropbtn:focus, .user:focus, .linkBtn:focus {
+	border: 0 none;
+	outline: 0;
 }
-
 .redes_impacta {text-decoration: none;}
 footer {
 	background-color:#e4e4e4;
@@ -99,6 +119,8 @@ div.copyright {
 @media only screen and (min-width: 320px) and (max-width: 736px)
 {
 	div.sigaImpacta {padding-top: 1em;}
+	.drop_menu, .dropbtn{display: block;}
+	.menu_extenco{display: none;}
 	.content{margin-top: 4.5em;}
 }
 
@@ -111,6 +133,13 @@ div.copyright {
 	position:relative;
 	width:100%;
 	top:10px;
+}
+.btn{
+	display: flex;
+	flex-flow: column;
+}
+.liDrop{
+	background-color: lightgray;
 }
 .areaAluno{
 	display:flex;
@@ -271,7 +300,7 @@ label{
 	height: max-content;
 	width:100%;
 	border-radius: 0px 0px 5px 5px;
-	background-color: #ffffff;
+	background-color: ##9c9c9c;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 736px){
