--- a/core/templates/area_professor.html
+++ b/core/templates/area_professor.html
@@ -1,12 +1,7 @@
 {% extends 'base.html' %}
-
 {% load static %}
 
-{% block estilo_unico %}{% static '/' %}css/site.css{% endblock %}
-
-{% block script_unico %}{% endblock %}
-	   
-{% block title %}Faculdade Impacta - Home{% endblock %}
+{% block title %}Área do Professor - IMPACTA{% endblock %}
 
 {% block main %}
     <section class="content">
