--- a/core/templates/boletim.html
+++ b/core/templates/boletim.html
@@ -1,5 +1,8 @@
 {% extends 'area_aluno.html' %}
 {% load static %}
+
+{% block title %}Boletim - Área do Aluno{% endblock %}
+
 {% block conteudoAluno %}
 <div class="content">
     <table>
