--- a/core/templates/historico.html
+++ b/core/templates/historico.html
@@ -1,5 +1,8 @@
 {% extends 'area_aluno.html' %}
 {% load static %}
+
+{% block title %}Histórico - Área do Aluno{% endblock %} 
+
 {% block conteudoAluno %}
 <div class="width80 maxHeight content">
 <fieldset class="flexFieldSet">
