--- a/core/templates/noticias.html
+++ b/core/templates/noticias.html
@@ -3,13 +3,7 @@
 
 {% block estilo_unico %}{% static '/' %}css/noticias.css{% endblock %}
 
-{% block script_unico %}{% endblock %}
-
-{% block login %}{% endblock %}
-
-{% block img_user %}{% endblock %}
-
-{% block title %}Noticias - Impacta{% endblock %}
+{% block title %}Noticias - IMPACTA{% endblock %}
 
 {% block main %}
 	<section class = 'margin'>
