--- a/core/templates/upload_aluno.html
+++ b/core/templates/upload_aluno.html
@@ -1,6 +1,8 @@
 {% extends 'area_aluno.html' %}
 {% load static %}
 
+{% block title %}Trabalhos e Exercícios - Área do Aluno{% endblock %} 
+
 {% block conteudoAluno %}
 <div class="width80 maxHeight content">
     <fieldset class="flexFieldSet">
@@ -10,34 +12,30 @@
         <div class="inputGroup">
             <label for="disciplina">Disciplina: </label>
             <select  class="informs" name="disciplina" id="disciplina">
-                {% for d in matriculas.nome_disciplina %}
-                <option>{{ d }}</option>
+                {% for d in disciplinas %}
+                <option>{{ d.nome_disciplina }}</option>
                 {% endfor %}
-                <option>ADS</option>
             </select>
 
             <label for="ano_ofertado">Ano: </label>
             <select  class="informs" name="ano_ofertado" id="ano_ofertado">
-                {% for ano in matriculas.ano_ofertado %}
-                <option>{{ ano }}</option>
+                {% for ano in ano %}
+                <option>{{ ano.ano_ofertado }}</option>
                 {% endfor %}
-                <option>2017</option>
             </select>
 
             <label for="semestre_ofertado">Semestre: </label>
             <select  class="informs" name="semestre_ofertado" id="semestre_ofertado">
-                {% for sem in matriculas.semestre_ofertado %}
-                <option>{{ sem }}</option>
+                {% for sem in semestre %}
+                <option>{{ sem.semestre_ofertado }}</option>
                 {% endfor %}
-                <option>2</option>
             </select>
 
             <label for="id_turma">Turma: </label>
             <select  class="informs" name="id_turma" id="id_turma">
-                {% for turma in matriculas.id_turma %}
+                {% for turma in turmas %}
                 <option>{{ turma }}</option>
                 {% endfor %}
-                <option>b</option>
             </select>
         </div>
         <div class="inputGroup">
